terminado el pop up

--- a/index.html
+++ b/index.html
@@ -50,10 +50,9 @@
 	</main>
 
 	<section class="pop-up-container" id="pop-up-container">
-		<span class="material-icons close" id="close">close</span>
-		<div class="bounceIn pop-up">
-
+		<div class="bounceIn pop-up" id="pop-up">
 		</div>
+		<span class="material-icons close" id="close">close</span>
 	</section>
 
 	<script src='index.js' type='text/javascript'></script>
